removed some smells